power-bi-connector/1.0/release-notes.md
---
title: Release Notes
description: Release notes for the Couchbase Power BI Connector.
editUrl: https://github.com/couchbase/docs-connectors-power-bi/edit/release/1.0/modules/ROOT/pages/release-notes.adoc
pubDate: 2026-03-25T08:25:24.097Z
link: xref:1.0@power-bi-connector::release-notes.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/power-bi-connector/1.0/release-notes.html)

# Release Notes

> Release notes for the Couchbase Power BI Connector. 

The [Couchbase Power BI Connector](index.md) provides integration between Microsoft’s Power BI interactive data visualization platform and either Couchbase Analytics Service (CBAS) or tabular views of your Capella columnar collections or query results.

For self-managed CBAS, the Power BI connector requires Couchbase Server 7.2.4 or newer.

## [](#v-1-0)Version 1.0 (2024-01-25)

[Power BI Connector Download](https://packages.couchbase.com/releases/couchbase-powerbi-connector/1.0/couchbase-powerbi-connector-1.0.mez)

The supported and tested dependencies of this release are:

* [couchbase-odbc-1.0-win64.msi](https://packages.couchbase.com/releases/couchbase-odbc-driver/1.0/couchbase-odbc-1.0-win64.msi)

  * See the [Notices File](https://packages.couchbase.com/releases/couchbase-odbc-driver/1.0/couchbase-odbc-driver-1.0-notices.txt) for dependency licenses for the ODBC Driver.
* Win64 Open SSL 1.1.1 Light

This is the initial release of the Couchbase Power BI Connector.